# NativeAndroidSkiaSharp

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/matthew/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/matthew/myapplication/: MainActivity.java
app/src/test/java/com/example/matthew/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
